[package]
name = "uv-audit"
version = "0.1.0"
edition = "2024"

[lib]
name = "uv_audit"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uv-audit"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1"
